background removed iimage and chage banner style

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
       
 <!------------------------------------------------------Header---------------------------------------------------->
 
-<div class="image-box">
-  <img src="images\carousel slide\WhatsApp Image 2024-05-05 at 15.29.28_91aa7e96.jpg" alt="Image description">
+<div class="image-container">
+  <img src="images\carousel slide\WhatsApp Image 2024-05-05 at 14.51.29_3033bece.jpg" alt="Image description" class="image">
   <div class="text-overlay">
-    <h2 id="banner-text"></h2>
-    <div><br><br><br><button id="banner-button">Contact us</button></div>
+    <h2>Give Your Child The Foundation For success </h2>
+    <button>About Us</button>
   </div>
 </div>
 
@@ -55,7 +55,7 @@
       <h4 class="cd-h4 mt-3 mb-3">Our Latest Collections</h4>
       <div class="product-container">
         <div class="product-box">
-            <img src="images/Products/bg removed/WhatsApp Image 2024-04-23 at 19.23.38_a212a797.png" alt="Product Image 1">
+            <img src="images/Products/bg removed/leastest collection/WhatsApp Image 2024-04-22 at 20.30.12_1a6b17e3.png" alt="Product Image 1">
             <div class="product-info">
                 <span class="price">$29.99</span><br>
                 <p>##</p>
@@ -63,7 +63,7 @@
             </div>
         </div>
         <div class="product-box">
-            <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.15_62d41ce0.jpg" alt="Product Image 2">
+            <img src= "images/Products/bg removed/leastest collection/WhatsApp Image 2024-04-22 at 20.30.13_e9418259.png" alt="Product Image 2">
             <div class="product-info">
                 <span class="price">$34.50</span><br>
                 <p>##</p>
@@ -71,7 +71,7 @@
             </div>
         </div>
         <div class="product-box">
-            <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.16_a99a0b3a.jpg" alt="Product Image 3">
+            <img src="images/Products/bg removed/leastest collection/WhatsApp Image 2024-04-22 at 20.30.14_d144d3b4.png" alt="Product Image 3">
             <div class="product-info">
                 <span class="price">$19.95</span><br>
                 <p>##</p>
@@ -79,7 +79,7 @@
             </div>
         </div>
         <div class="product-box">
-          <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.38_f43b9bb7.jpg" alt="Product Image 1">
+          <img src="images\Products/bg removed/leastest collection/WhatsApp Image 2024-04-22 at 20.30.19_bcc2db70.png" alt="Product Image 1">
           <div class="product-info">
               <span class="price">$29.99</span><br>
               <p>##</p>
@@ -93,7 +93,7 @@
     <div class="col-sm-12 " >
       <div class="product-container">
         <div class="product-box">
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.38_f43b9bb7.jpg" alt="Product Image 1">
+            <img src="images\Products/bg removed/leastest collection/WhatsApp Image 2024-04-22 at 20.30.21_f464b19c.png" alt="Product Image 1">
             <div class="product-info">
                 <span class="price">$29.99</span><br>
                 <p>##</p>
@@ -101,7 +101,7 @@
             </div>
         </div>
         <div class="product-box">
-            <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.15_62d41ce0.jpg" alt="Product Image 2">
+            <img src="images/Products/bg removed/leastest collection/WhatsApp Image 2024-04-23 at 19.23.38_4d6ec3cb.png" alt="Product Image 2">
             <div class="product-info">
                 <span class="price">$34.50</span><br>
                 <p>##</p>
@@ -109,7 +109,7 @@
             </div>
         </div>
         <div class="product-box">
-            <img src="images/Products/bg removed/WhatsApp Image 2024-04-23 at 19.23.38_6467a58e.png" alt="Product Image 3">
+            <img src="images/Products/bg removed/leastest collection/WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.png" alt="Product Image 3">
             <div class="product-info">
                 <span class="price">$19.95</span><br>
                 <p>##</p>
@@ -117,7 +117,7 @@
             </div>
         </div>
         <div class="product-box">
-          <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.38_f43b9bb7.jpg" alt="Product Image 1">
+          <img src="images\Products/bg removed/leastest collection/WhatsApp Image 2024-04-23 at 19.23.38_ad58fd6e.png" alt="Product Image 1">
           <div class="product-info">
               <span class="price">$29.99</span><br>
               <p>##</p>
@@ -131,13 +131,14 @@
 <!------------------------------------------------------Cards---------------------------------------------------->
 
 <!------------------------------------------------------Banner---------------------------------------------------->
-<div class="image-box">
-  <img src="images/carousel slide/WhatsApp Image 2024-05-05 at 16.10.40_1d192809.jpg" alt="Image description">
+<div class="image-container">
+  <img src="images\carousel slide\WhatsApp Image 2024-05-05 at 15.54.46_24c6046b.jpg" alt="Image description" class="image">
   <div class="text-overlay">
-    <h2 id="banner-text"></h2>
-    <div><br><br><br><a href="#contact"><button id="banner-buttonas">About us</button></a></div>
+    <h2>Give Your Child The Foundation For success.</h2>
+    <button>Contact US</button>
   </div>
 </div>
+
 
 <!------------------------------------------------------Banner---------------------------------------------------->
 
@@ -156,7 +157,7 @@
             </div>
         </div>
         <div class="product-box">
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_5e8e4650.jpg" alt="Product Image 2">
+            <img src="images\Products/bg removed/WhatsApp Image 2024-04-22 at 20.30.13_3cfdb65d.png" alt="Product Image 2">
             <div class="product-info">
                 <span class="price">$34.50</span><br>
                 <p>##</p>
@@ -164,7 +165,7 @@
             </div>
         </div>
         <div class="product-box">
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_32bc2ec7.jpg" alt="Product Image 3">
+            <img src="images\Products/bg removed/WhatsApp Image 2024-04-22 at 20.30.13_e5d21b91.png" alt="Product Image 3">
             <div class="product-info">
                 <span class="price">$19.95</span><br>
                 <p>##</p>
@@ -172,7 +173,7 @@
             </div>
         </div>
         <div class="product-box">
-          <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.38_ad58fd6e.jpg" alt="Product Image 1">
+          <img src="images\Products/bg removed/WhatsApp Image 2024-04-22 at 20.30.13_e9418259.png" alt="Product Image 1">
           <div class="product-info">
               <span class="price">$29.99</span><br>
               <p>##</p>
@@ -186,7 +187,7 @@
     <div class="col-sm-12 " >
       <div class="product-container">
         <div class="product-box">
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_7e51ce81.jpg" alt="Product Image 1">
+            <img src="images\Products/bg removed/WhatsApp Image 2024-04-22 at 20.30.14_b47d843d.png" alt="Product Image 1">
             <div class="product-info">
                 <span class="price">$29.99</span><br>
                 <p>##</p>
@@ -194,7 +195,7 @@
             </div>
         </div>
         <div class="product-box">
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_1c38d72d.jpg" alt="Product Image 2">
+            <img src="images\Products/bg removed/WhatsApp Image 2024-04-22 at 20.30.14_d144d3b4.png" alt="Product Image 2">
             <div class="product-info">
                 <span class="price">$34.50</span><br>
                 <p>##</p>
@@ -202,7 +203,7 @@
             </div>
         </div>
         <div class="product-box">
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_ef9203ea.jpg" alt="Product Image 3">
+            <img src="images\Products/bg removed/WhatsApp Image 2024-04-22 at 20.30.15_62d41ce0.png" alt="Product Image 3">
             <div class="product-info">
                 <span class="price">$19.95</span><br>
                 <p>##</p>
@@ -210,7 +211,7 @@
             </div>
         </div>
         <div class="product-box">
-          <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_32bc2ec7.jpg" alt="Product Image 1">
+          <img src="images\Products/bg removed/WhatsApp Image 2024-04-22 at 20.30.15_b7b7ab88.png" alt="Product Image 1">
           <div class="product-info">
               <span class="price">$29.99</span><br>
               <p>##</p>
@@ -372,11 +373,11 @@
     </div>
   </footer>
 </footer>
-<!------------------------------------------------------Footer---------------------------------------------------->
-
-
-<script src="node_modules\jquery\dist\jquery.js"></script>
-<script src="node_modules\bootstrap\dist\js\bootstrap.js"></script>
-<script src="js/Script.js"></script>
-</body>
-</html>
+  <!------------------------------------------------------Footer---------------------------------------------------->
+  
+  
+  <script src="node_modules\jquery\dist\jquery.js"></script>
+  <script src="node_modules\bootstrap\dist\js\bootstrap.js"></script>
+  <script src="js/Script.js"></script>
+  </body>
+  </html>
