--- a/Products.html
+++ b/Products.html
@@ -211,7 +211,7 @@
           <ul>
             <li><a href="index.html" style=" color: #000;">Home</a></li><br>
             <li><a href="aboutus.html" style=" color: #000;">About Us</a></li><br>
-            <li><a href="#" style=" color: #000;">Services</a></li><br>
+            <li><a href="Products.html" style=" color: #000;">Products</a></li><br>
             <li><a href="#contact" id="#contact" style=" color: #000;">Contact</a></li>
           </ul>
         </div>
