--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 <div class="image-container">
   <img src="images\carousel slide\WhatsApp Image 2024-05-05 at 14.51.29_3033bece.jpg" alt="Image description" class="image">
   <div class="text-overlay">
-    <h2>Give Your Child The Foundation For success </h2>
-    <button>About Us</button>
+    <h2>Give Your Child The Foundation For success <br><br><a href="aboutus.html"><button>About Us</button></a></h2>
+    
   </div>
 </div>
 
@@ -134,8 +134,8 @@
 <div class="image-container">
   <img src="images\carousel slide\WhatsApp Image 2024-05-05 at 15.54.46_24c6046b.jpg" alt="Image description" class="image">
   <div class="text-overlay">
-    <h2>Give Your Child The Foundation For success.</h2>
-    <button>Contact US</button>
+    <h2>Give Your Child The Foundation For success.<br><br><a href="#"><button >Contact US</button></a></h2>
+    
   </div>
 </div>
 
@@ -350,7 +350,7 @@
           <ul>
             <li><a href="index.html" style=" color: #000;">Home</a></li><br>
             <li><a href="aboutus.html" style=" color: #000;">About Us</a></li><br>
-            <li><a href="#" style=" color: #000;">Services</a></li><br>
+            <li><a href="Products.html" style=" color: #000;">Products</a></li><br>
             <li><a href="#contact" id="#contact" style=" color: #000;">Contact</a></li>
           </ul>
         </div>
