Banner button size modifed

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <div class="image-container">
   <img src="images\carousel slide\WhatsApp Image 2024-05-05 at 14.51.29_3033bece.jpg" alt="Image description" class="image">
   <div class="text-overlay">
-    <h2>Give Your Child The Foundation For success <br><br><a href="aboutus.html"><button>About Us</button></a></h2>
+    <h2>Give Your Child The Foundation For success <br><br><a href="aboutus.html"><button style="font-size: large;">About Us</button></a></h2>
     
   </div>
 </div>
@@ -134,7 +134,7 @@
 <div class="image-container">
   <img src="images\carousel slide\WhatsApp Image 2024-05-05 at 15.54.46_24c6046b.jpg" alt="Image description" class="image">
   <div class="text-overlay">
-    <h2>Give Your Child The Foundation For success.<br><br><a href="#"><button >Contact US</button></a></h2>
+    <h2>Give Your Child The Foundation For success.<br><br><a href="#"><button style="font-size: large;">Contact US</button></a></h2>
     
   </div>
 </div>
